made changes to makefile adn template

--- a/template/Makefile
+++ b/template/Makefile
@@ -1,16 +1,16 @@
 .SILENT :
 
 build-win:
-		GOOS=windows GOARCH=amd64 go build -o ./build/windows/main.exe main.go
+		GOOS=windows GOARCH=amd64 go build -o ./build/windows/packageName.exe main.go
 build-lin:
-		GOOS=linux GOARCH=amd64 go build -o ./build/linux/main main.go
+		GOOS=linux GOARCH=amd64 go build -o ./build/linux/packageName main.go
 build-all:
-		GOOS=windows GOARCH=amd64 go build -o ./build/windows/main.exe main.go
-		GOOS=linux GOARCH=amd64 go build -o ./build/linux/main main.go
+		GOOS=windows GOARCH=amd64 go build -o ./build/windows/packageName.exe main.go
+		GOOS=linux GOARCH=amd64 go build -o ./build/linux/packageName main.go
 remove-win:
-		rm -rf ./build/windows/main.exe
+		rm -rf ./build/windows/*
 remove-lin:
-		rm -rf ./build/linux/main
+		rm -rf ./build/linux/*
 remove-all:
-		rm -rf ./build/windows/main.exe
-		rm -rf ./build/linux/main
+		rm -rf ./build/windows/*
+		rm -rf ./build/linux/*
