--- a/mkvmerge-notifier/Makefile
+++ b/mkvmerge-notifier/Makefile
@@ -1,10 +1,10 @@
 # Golang Project Makefile
 # -----------------
-# Project: template
+# Project: mkvmerge-notifier
 # Date: June 30, 2025
 
 # Binary name
-BINARY_NAME := template
+BINARY_NAME := mkvmerge-notifier
 WINDOWS_BINARY := $(BINARY_NAME).exe
 LINUX_BINARY := $(BINARY_NAME)
 
